refactoring music provider, added amazon music
